# Finapp

./: .gitignore  cria_db.py  finapp.db  pyproject.toml  requirements.txt
finapp_core/: models.py
finapp_core/storage/: base.py  sqlite_repo.py
scripts/: add_transacao.py
tests/: test_models.py
